--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "express-simple-starter",
   "private": true,
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.18.2",
+    "mongoose": "^8.9.5",
+    "node": "^23.7.0",
+    "nodemon": "^3.1.9"
   }
 }
